--- a/geological-analysis-app/app/templates/base.html
+++ b/geological-analysis-app/app/templates/base.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="{{ url_for('app.geological_analysis') }}">Análisis Interactivo</a>
                 </li>
                 <li class="nav-item">
-                <!-- <a class="nav-link" href="{{ url_for('login') }}">Login</a> -->
+                <a class="nav-link" href="{{ url_for('app.geological_analysis') }}">Análisis</a>
                 </li>
             </ul>
         </div>
